--- a/print/tex-jadetex/Makefile
+++ b/print/tex-jadetex/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.23 2006/06/24 15:35:25 darcy Exp $
+# $NetBSD: Makefile,v 1.24 2006/07/27 00:09:06 hubertf Exp $
 #
 
 DISTNAME=	jadetex-3.13
 PKGNAME=	tex-${DISTNAME}
-PKGREVISION=	4
+PKGREVISION=	5
 CATEGORIES=	print
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=jadetex/}
 
