--- a/graphics/MesaLib/Makefile
+++ b/graphics/MesaLib/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.50 2006/08/01 21:40:20 jlam Exp $
+# $NetBSD: Makefile,v 1.51 2006/10/09 12:52:35 joerg Exp $
 
 PKGNAME=	MesaLib-${MESA_VERSION}
-PKGREVISION=	2
+PKGREVISION=	3
 COMMENT=	Graphics library similar to SGI's OpenGL
 
 .include "../../graphics/Mesa/Makefile.lib"
