--- a/parallel/sge/Makefile
+++ b/parallel/sge/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.21 2006/10/21 20:25:21 markd Exp $
+# $NetBSD: Makefile,v 1.22 2006/12/15 20:33:00 joerg Exp $
 #
 
 PKGNAME=		sge-6.0.8
+PKGREVISION=		1
 DISTNAME=		sge-V60u8_TAG-src
 CATEGORIES=		parallel sysutils
 MASTER_SITES=		# empty
