--- a/editors/emacs/Makefile.common
+++ b/editors/emacs/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.10 2006/07/02 10:03:14 rillig Exp $
+# $NetBSD: Makefile.common,v 1.11 2006/11/03 07:01:54 wiz Exp $
 
 MASTER_SITES=	${MASTER_SITE_GNU:=emacs/}
 MAINTAINER=	markd@NetBSD.org
@@ -72,7 +72,9 @@ post-extract:
 
 # for patch-ba
 post-build:
-	(cd ${WRKSRC}/lisp; ${MAKE_PROGRAM} sort.elc)
+	cd ${WRKSRC}/lisp && \
+	   rm sort.elc && ${MAKE_PROGRAM} sort.elc && \
+	   rm mail/smtpmail.elc && ${MAKE_PROGRAM} mail/smtpmail.elc
 
 pre-install:
 	@${FIND} ${WRKSRC} -type f -name "*.orig" -print | ${XARGS} ${RM} -f
