--- a/net/gift-fasttrack/Makefile
+++ b/net/gift-fasttrack/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.6 2006/03/04 21:30:18 jlam Exp $
+# $NetBSD: Makefile,v 1.7 2006/06/07 12:30:36 joerg Exp $
 #
 
 DISTNAME=	giFT-FastTrack-0.8.9
@@ -7,7 +7,7 @@ CATEGORIES=	net
 MASTER_SITES=	http://download.berlios.de/gift-fasttrack/
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	http://download.berlios.de/gift-fasttrack/
+HOMEPAGE=	http://gift-fasttrack.berlios.de/
 COMMENT=	Fasttrack plugin for giFT
 
 WRKSRC=			${WRKDIR}/${DISTNAME}
