--- a/net/gift-gnutella/Makefile
+++ b/net/gift-gnutella/Makefile
@@ -1,14 +1,13 @@
-# $NetBSD: Makefile,v 1.7 2006/06/07 12:36:20 joerg Exp $
+# $NetBSD: Makefile,v 1.8 2006/07/07 15:49:33 jlam Exp $
 #
 
-DISTNAME=		gift-gnutella-0.0.9.2
-PKGREVISION=		3
+DISTNAME=		gift-gnutella-0.0.11
 CATEGORIES=		net
 MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=gift/}
 EXTRACT_SUFX=		.tar.bz2
 
 MAINTAINER=		pkgsrc-users@NetBSD.org
-HOMEPAGE=		http://gift..sourceforge.net/
+HOMEPAGE=		http://gift.sourceforge.net/
 COMMENT=		Gnutella plugin for giFT
 
 USE_PKGLOCALEDIR=	yes
