--- a/comms/libmal/Makefile
+++ b/comms/libmal/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.7 2006/02/05 23:08:27 joerg Exp $
+# $NetBSD: Makefile,v 1.8 2006/06/19 16:48:49 minskim Exp $
 
-DISTNAME=		libmal-0.40
-PKGREVISION=		2
+DISTNAME=		libmal-0.43
 CATEGORIES=		comms
 MASTER_SITES=		http://jasonday.home.att.net/code/libmal/
 
