--- a/misc/kdeedu3/Makefile
+++ b/misc/kdeedu3/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.42 2006/06/01 14:06:41 markd Exp $
+# $NetBSD: Makefile,v 1.43 2007/01/17 23:47:21 wiz Exp $
 
 DISTNAME=	kdeedu-${_KDE_VERSION}
-PKGREVISION=	1
 CATEGORIES=	misc
 COMMENT=	Edu{tainment,cation} tools for the KDE integrated X11 desktop
 
@@ -11,9 +10,8 @@ REPLACE_PERL+=	\
 	kvoctrain/kvoctrain/langen2kvtml \
 	kvoctrain/kvoctrain/spotlight2kvtml
 
-USE_DIRS+=		xdg-1.1
-
 .include "../../meta-pkgs/kde3/kde3.mk"
+.include "../../graphics/hicolor-icon-theme/buildlink3.mk"
 .include "../../x11/kdebase3/buildlink3.mk"
 .include "../../x11/kdelibs3/buildlink3.mk"
 .include "../../mk/pthread.buildlink3.mk"
