--- a/games/kdetoys3/Makefile
+++ b/games/kdetoys3/Makefile
@@ -1,15 +1,13 @@
-# $NetBSD: Makefile,v 1.35 2006/06/01 14:21:08 markd Exp $
+# $NetBSD: Makefile,v 1.36 2007/01/17 23:47:19 wiz Exp $
 
 DISTNAME=	kdetoys-${_KDE_VERSION}
-PKGREVISION=	1
 CATEGORIES=	games
 COMMENT=	Toys for the KDE integrated X11 desktop
 
 .include "../../meta-pkgs/kde3/Makefile.kde3"
 
-USE_DIRS+=		xdg-1.1
-
 .include "../../meta-pkgs/kde3/kde3.mk"
+.include "../../graphics/hicolor-icon-theme/buildlink3.mk"
 .include "../../x11/kdebase3/buildlink3.mk"
 .include "../../x11/kdelibs3/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
