--- a/chat/konversation/Makefile
+++ b/chat/konversation/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.9 2007/01/11 11:32:16 joerg Exp $
+# $NetBSD: Makefile,v 1.10 2007/01/17 23:47:18 wiz Exp $
 #
 
 DISTNAME=	konversation-1.0.1
-PKGREVISION=	2
+PKGREVISION=	3
 CATEGORIES=	chat kde
 MASTER_SITES=	http://download.berlios.de/konversation/
 EXTRACT_SUFX=	.tar.bz2
@@ -31,6 +31,7 @@ USE_TOOLS+=		bash:run
 BUILDLINK_DEPMETHOD.libXt?=	build
 
 .include "../../meta-pkgs/kde3/kde3.mk"
+.include "../../graphics/hicolor-icon-theme/buildlink3.mk"
 .include "../../x11/kdelibs3/buildlink3.mk"
 .include "../../x11/libSM/buildlink3.mk"
 .include "../../x11/libX11/buildlink3.mk"
