--- a/graphics/kphotoalbum/Makefile
+++ b/graphics/kphotoalbum/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.3 2007/01/13 00:17:53 joerg Exp $
+# $NetBSD: Makefile,v 1.4 2007/01/17 23:47:20 wiz Exp $
 #
 
 DISTNAME=		kphotoalbum-2.2
-PKGREVISION=		1
+PKGREVISION=		2
 CATEGORIES=		graphics
 MASTER_SITES=		http://ktown.kde.org/kphotoalbum/download/
 
@@ -20,6 +20,7 @@ USE_TOOLS+=		msgfmt
 BUILDLINK_DEPMETHOD.libXt?=	build
 
 .include "../../meta-pkgs/kde3/kde3.mk"
+.include "../../graphics/hicolor-icon-theme/buildlink3.mk"
 .include "../../graphics/libkipi/buildlink3.mk"
 .include "../../x11/kdelibs3/buildlink3.mk"
 .include "../../x11/libSM/buildlink3.mk"
