--- a/graphics/showimg/Makefile
+++ b/graphics/showimg/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.17 2007/01/13 16:34:00 joerg Exp $
+# $NetBSD: Makefile,v 1.18 2007/01/17 23:47:21 wiz Exp $
 #
 
 DISTNAME=	showimg-0.9.5
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	kde graphics x11
 MASTER_SITES=	http://www.jalix.org/projects/showimg/download/0.9.5/
 EXTRACT_SUFX=	.tar.bz2
@@ -22,6 +22,7 @@ CONFIGURE_ARGS+=	--without-showimgdb
 BUILDLINK_DEPMETHOD.libXt?=	build
 
 .include "../../meta-pkgs/kde3/kde3.mk"
+.include "../../graphics/hicolor-icon-theme/buildlink3.mk"
 .include "../../graphics/libexif/buildlink3.mk"
 .include "../../graphics/libkexif/buildlink3.mk"
 .include "../../graphics/libkipi/buildlink3.mk"
