--- a/x11/kmessage/Makefile
+++ b/x11/kmessage/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.16 2007/01/11 11:20:37 joerg Exp $
+# $NetBSD: Makefile,v 1.17 2007/01/17 23:47:26 wiz Exp $
 
 DISTNAME=	kmessage-0.1
-PKGREVISION=	9
+PKGREVISION=	10
 CATEGORIES=	x11 kde
 MASTER_SITES=	http://soliton.wins.uva.nl/~wijnhout/kmessage/
 
@@ -17,6 +17,7 @@ GNU_CONFIGURE=          YES
 BUILDLINK_DEPMETHOD.libXt?=	build
 
 .include "../../meta-pkgs/kde3/kde3.mk"
+.include "../../graphics/hicolor-icon-theme/buildlink3.mk"
 .include "../../x11/kdelibs3/buildlink3.mk"
 .include "../../x11/libSM/buildlink3.mk"
 .include "../../x11/libX11/buildlink3.mk"
