--- a/audio/libvisual-plugins/Makefile
+++ b/audio/libvisual-plugins/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.13 2006/06/08 21:41:22 joerg Exp $
+# $NetBSD: Makefile,v 1.14 2006/07/03 23:36:05 wiz Exp $
 #
 
 DISTNAME=		libvisual-plugins-0.4.0
@@ -23,5 +23,4 @@ USE_TOOLS+=		pkg-config mkdirhier
 .include "../../graphics/MesaLib/buildlink3.mk"
 # currently not useful, since libgdkpixbuf plugin is not configurable
 #.include "../../x11/gtk2/buildlink3.mk"
-.include "../../mk/x11.buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
