--- a/audio/gtkpod/Makefile
+++ b/audio/gtkpod/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.13 2006/07/05 05:37:39 jlam Exp $
+# $NetBSD: Makefile,v 1.14 2006/09/07 20:30:09 smb Exp $
 #
 
 DISTNAME=	gtkpod-0.94.0
@@ -31,5 +31,4 @@ BUILDLINK_API_DEPENDS.gtk2+=	gtk2+>=2.4.0
 .include "../../textproc/libxml2/buildlink3.mk"
 .include "../../x11/gtk2/buildlink3.mk"
 .include "../../mk/pthread.buildlink3.mk"
-.include "../../mk/x11.buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
