--- a/devel/cvs2svn/Makefile
+++ b/devel/cvs2svn/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.12 2006/02/05 23:08:40 joerg Exp $
+# $NetBSD: Makefile,v 1.13 2006/03/04 21:29:13 jlam Exp $
 
-DISTNAME=	cvs2svn-1.3.0
-PKGREVISION=	2
+DISTNAME=	cvs2svn-1.5.0
 CATEGORIES=	devel
-MASTER_SITES=	http://cvs2svn.tigris.org/files/documents/1462/25036/
+MASTER_SITES=	http://cvs2svn.tigris.org/files/documents/1462/34574/
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://cvs2svn.tigris.org/
