--- a/x11/xbindkeys/Makefile.common
+++ b/x11/xbindkeys/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.9 2006/03/04 21:31:12 jlam Exp $
+# $NetBSD: Makefile.common,v 1.10 2006/12/08 16:16:12 obache Exp $
 #
 
 DISTNAME=	xbindkeys-1.7.3
@@ -14,4 +14,4 @@ PATCHDIR=	${.CURDIR}/../../x11/xbindkeys/patches
 
 GNU_CONFIGURE=	yes
 
-.include "../../mk/x11.buildlink3.mk"
+.include "../../x11/libX11/buildlink3.mk"
