--- a/x11/matchbox-panel-manager/Makefile
+++ b/x11/matchbox-panel-manager/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.5 2006/04/17 13:46:59 wiz Exp $
+# $NetBSD: Makefile,v 1.6 2006/06/11 14:44:00 joerg Exp $
 #
 
 DISTNAME=	matchbox-panel-manager-0.1
@@ -17,5 +17,4 @@ GNU_CONFIGURE=	yes
 
 .include "../../devel/libmatchbox/buildlink3.mk"
 .include "../../x11/gtk2/buildlink3.mk"
-.include "../../mk/x11.buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
