--- a/x11/matchbox-panel/Makefile
+++ b/x11/matchbox-panel/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.12 2006/08/06 05:20:40 kristerw Exp $
+# $NetBSD: Makefile,v 1.13 2006/12/15 20:33:04 joerg Exp $
 #
 
 DISTNAME=		matchbox-panel-0.9.2
@@ -34,5 +34,4 @@ PLIST_SUBST+=	COND_APM=""
 .include "../../devel/libmatchbox/buildlink3.mk"
 .include "../../x11/libXft/buildlink3.mk"
 .include "../../x11/startup-notification/buildlink3.mk"
-.include "../../mk/x11.buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
