--- a/net/vncviewer/Makefile
+++ b/net/vncviewer/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.17 2006/12/27 13:37:39 joerg Exp $
+# $NetBSD: Makefile,v 1.18 2007/01/07 09:14:07 rillig Exp $
 
 DISTNAME=       	vnc-4_1_2-unixsrc
 PKGNAME=		vncviewer-4.1.2
@@ -35,6 +35,7 @@ do-install:
 BUILDLINK_DEPMETHOD.libXt?=	build
 
 .include "../../devel/zlib/buildlink3.mk"
+.include "../../x11/inputproto/buildlink3.mk"
 .include "../../x11/libX11/buildlink3.mk"
 .include "../../x11/libXext/buildlink3.mk"
 .include "../../x11/libXt/buildlink3.mk"
