--- a/print/poppler-glib/Makefile
+++ b/print/poppler-glib/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.9 2006/05/31 18:13:54 drochner Exp $
+# $NetBSD: Makefile,v 1.10 2006/11/13 21:00:39 drochner Exp $
 #
 
 .include "../../print/poppler/Makefile.common"
@@ -34,6 +34,7 @@ post-install:
 
 .include "../../devel/glib2/buildlink3.mk"
 .include "../../graphics/cairo/buildlink3.mk"
+.include "../../graphics/jpeg/buildlink3.mk"
 BUILDLINK_API_DEPENDS.poppler+=     poppler>=${POPPLER_VERS}
 .include "../../print/poppler/buildlink3.mk"
 .include "../../x11/gtk2/buildlink3.mk"
