--- a/lang/sun-jre14/Makefile.common
+++ b/lang/sun-jre14/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.32 2006/10/09 07:24:06 joerg Exp $
+# $NetBSD: Makefile.common,v 1.33 2006/10/18 12:53:54 obache Exp $
 
 CATEGORIES=	lang java
 EXTRACT_SUFX=	.bin
@@ -60,7 +60,7 @@ END_MESSAGE=								\
 	""								\
 	"The file jce_policy-1_4_2.zip must be fetched into:"		\
 	"    ${DISTDIR}/jce_policy-1_4_2.zip"				\
-	""
+	""								\
 	"Under 'Other Downloads' / 'Java Cryptography Extension'"	\
 	"click 'Download' and choose the .zip file."
 .endif
