--- a/www/Makefile
+++ b/www/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.495 2007/01/24 20:00:23 epg Exp $
+# $NetBSD: Makefile,v 1.496 2007/01/25 20:23:33 abs Exp $
 #
 
 COMMENT=	Packages related to the World Wide Web
@@ -51,7 +51,6 @@ SUBDIR+=	ap2-fcgid
 SUBDIR+=	ap2-jk
 SUBDIR+=	ap2-perl
 SUBDIR+=	ap2-python
-SUBDIR+=	ap2-ruby
 SUBDIR+=	ap2-subversion
 SUBDIR+=	ap2-suphp
 SUBDIR+=	ap2-transform
