--- a/devel/ruby-gnome2-atk/Makefile
+++ b/devel/ruby-gnome2-atk/Makefile
@@ -1,13 +1,15 @@
-# $NetBSD: Makefile,v 1.2 2006/02/05 23:08:52 joerg Exp $
+# $NetBSD: Makefile,v 1.3 2006/07/25 16:49:05 minskim Exp $
 #
 
-PKGNAME=		ruby-gnome2-atk-${VERSION}
+PKGNAME=		${RUBY_PKGPREFIX}-gnome2-atk-${VERSION}
 COMMENT=		Ruby binding of ATK-1.0.x or later
 CATEGORIES=		devel
 
+CONFLICTS+=		ruby-gnome2-atk-[0-9]*
+
 RUBY_EXTCONF_SUBDIRS=	atk
 
-DEPENDS+=		ruby-gnome2-glib>=${VERSION}:../../devel/ruby-gnome2-glib
+DEPENDS+=		${RUBY_PKGPREFIX}-gnome2-glib>=${VERSION}:../../devel/ruby-gnome2-glib
 USE_TOOLS+=		pkg-config
 
 .include "../../devel/atk/buildlink3.mk"
