--- a/multimedia/xine-lib/Makefile.common
+++ b/multimedia/xine-lib/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.36 2006/12/08 09:24:26 abs Exp $
+# $NetBSD: Makefile.common,v 1.37 2006/12/08 18:47:41 drochner Exp $
 #
 
 DISTNAME=		xine-lib-${XINE_LIB_VER}
@@ -32,7 +32,10 @@ PKGSRC_MAKE_ENV+=	"mkdir_p"="mkdir -p"
 
 .include "../../mk/bsd.prefs.mk"
 
-.if !exists(${X11BASE}/lib/libXv.so)
+.if ${X11_TYPE} != "native"
+.include "../../x11/libXv/buildlink3.mk"
+PLIST_SUBST+=		HAVE_XV=
+.elif !exists(${X11BASE}/lib/libXv.so)
 PLIST_SUBST+=		HAVE_XV="@comment "
 .else
 CONFIGURE_ARGS+=	--with-xv-path='${X11BASE}/lib'
