--- a/graphics/libggi/Makefile
+++ b/graphics/libggi/Makefile
@@ -1,12 +1,11 @@
-# $NetBSD: Makefile,v 1.40 2006/03/04 21:29:49 jlam Exp $
+# $NetBSD: Makefile,v 1.41 2006/04/20 16:28:54 joerg Exp $
 #
 
 DISTNAME=	libggi-2.1.1.src
 PKGNAME=	${DISTNAME:S/.src//}
 PKGREVISION=	2
 CATEGORIES=	graphics
-MASTER_SITES=	ftp://ftp.ggi-project.org/pub/packages/ggi/ggi/v2.1/ \
-		http://www.ggi-project.org/ftp/ggi/v2.1/ \
+MASTER_SITES=	http://www.ggi-project.org/ftp/ggi/v2.1/ \
 		${MASTER_SITE_SOURCEFORGE:=ggi/}
 EXTRACT_SUFX=	.tar.bz2
 
